updates to git ignore

--- a/.gitIgnore
+++ b/.gitIgnore
@@ -1,4 +1,22 @@
 .env
-.zrchive/*
+.zrchive/
+
+# Ignore compiled Python bytecode files
+*.pyc
+
+# Ignore virtual environment files
+venv/
+env/
+
+# Ignore the local development settings file
+settings_local.py
+
+# Ignore logs and cache directories
+logs/
+__pycache__/
+
+# Ignore IDE files
+.vscode/
+.idea/
 
 
